fix:login + register

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="src/assets/css/responsive.css">
   <link rel="stylesheet" href="src/assets/css/animation.css">
   <link href="src/data/font/css/webfonts/all.css" rel="stylesheet">
-    
+  <script src="https://www.google.com/recaptcha/api.js?render=6LeN92gqAAAAAOrMZ62v0Cs1T1WBSm6hKFKMS8y9"></script>
   <script src="src/assets/js/jquery-3.7.1.js"></script>
   <!-- <script src="src/assets/js/bootstrap.min.js"></script> -->
   <script src="src/assets/js/script.js"></script>
